# CaLib

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  rootlogon.C
cmake/: FindROOT.cmake
config/: CB.cfg  MySQL.cfg  TAPS.cfg  Tagger.cfg  config.cfg  config.example  example.cfg
config/config_LD2_May09/: CB.cfg  Fill.cfg  Log.cfg  MySQL.cfg  PID.cfg  Precalib.cfg  RunSets.cfg  config.cfg
data/: MC_PID.root  MC_Pizza.root  data.def  types.def
include/: LinkDef.h  LinkDef.hh  TCACQUFile.h  TCARFileLoader.h  TCARHistoLoader.h  TCARRunHistoLoader.h  TCBadElement.h  TCBadScRElement.h  TCCalib.h  TCCalibCBEnergy.h  TCCalibCBQuadEnergy.h  TCCalibCBRiseTime.h  TCCalibCBTime.h  TCCalibCBTimeWalk.h  TCCalibData.h  TCCalibDeltaETrad.h  TCCalibDiscrThr.h  TCCalibDroop.h  TCCalibEnergy.h  TCCalibLED.h  TCCalibPIDDroop.h  TCCalibPIDEnergy.h  TCCalibPIDEnergyTrad.h  TCCalibPIDPhi.h  TCCalibPed.h  TCCalibPhi.h  TCCalibQuadEnergy.h  TCCalibRun.h  TCCalibRunBadScR.h  TCCalibRunBadScR_Data.h  TCCalibRunBadScR_TimeShift.h  TCCalibTAPSEnergy.h  TCCalibTAPSEnergyLG.h  TCCalibTAPSEnergySG.h  TCCalibTAPSLED.h  TCCalibTAPSPSA.h  TCCalibTAPSQuadEnergy.h  TCCalibTAPSTime.h  TCCalibTaggerTime.h  TCCalibTargetPosition.h  (+51 more)
macros/: AddBeamtime.C  AddCalibMC.C  AddMCRun.C  AddMoreRuns.C  AddRuns.C  AddSet.C  AddTable.C  CBElemThresholds.C  Calibrate.C  CalibrateGUI.C  CalibrateRunGUI.C  ChangeRunNumbersDump.C  CloneCalib.C  ConvertCaLib.C  Display.C  DisplayValues.C  Export.C  ExportDB.C  Import.C  InitCaLib.C  InspectDump.C  Install.C  InstallCaLib.C  MakeRunSets.C  ManageCaLib.C  Manager.C  ShowSets.C  Test.C  Upgrade_1.C  Upgrade_3.C  Upgrade_4.C  WriteARCalibration.C  WriteNScRtoDB.C  WriteParASCII.C  WriteTDCGainsTAPS.C  WriteTotScalerReads.C  gui_helper.C  istyle.C
macros/check/: CBEnergy.C  CBRiseTime.C  CBTime.C  (+7 more)
scripts/: mysql2sqlite.sh
src/: MainCaLibManager.cxx  TCACQUFile.cxx  TCARFileLoader.cxx  TCARHistoLoader.cxx  TCARRunHistoLoader.cxx  TCBadElement.cxx  TCBadScRElement.cxx  TCCalib.cxx  TCCalibCBEnergy.cxx  TCCalibCBQuadEnergy.cxx  TCCalibCBRiseTime.cxx  TCCalibCBTime.cxx  TCCalibCBTimeWalk.cxx  TCCalibData.cxx  TCCalibDeltaETrad.cxx  TCCalibDiscrThr.cxx  TCCalibDroop.cxx  TCCalibEnergy.cxx  TCCalibLED.cxx  TCCalibPIDDroop.cxx  TCCalibPIDEnergy.cxx  TCCalibPIDEnergyTrad.cxx  TCCalibPIDPhi.cxx  TCCalibPed.cxx  TCCalibPhi.cxx  TCCalibQuadEnergy.cxx  TCCalibRun.cxx  TCCalibRunBadScR.cxx  TCCalibRunBadScR_TimeShift.cxx  TCCalibTAPSEnergy.cxx  TCCalibTAPSEnergyLG.cxx  TCCalibTAPSEnergySG.cxx  TCCalibTAPSLED.cxx  TCCalibTAPSPSA.cxx  TCCalibTAPSQuadEnergy.cxx  TCCalibTAPSTime.cxx  TCCalibTaggerTime.cxx  TCCalibTargetPosition.cxx  TCCalibTime.cxx  TCCalibType.cxx  (+38 more)
(+53 files in other folders)
